add map component

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=3e613af47f46c0e5825d55a7607976bf&libraries=services"></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
